# project-whaleroad

./: .gitmodules  LICENSE.txt  README.txt  build.sh  build_android.sh  clean.sh  clean_android.sh
gen_src/: gen_lut_projected_area.py  gen_raster_bottomface.py
src/: CMakeLists.txt  main.cpp  resources.conf
src/engine/common/: constants.h  entity.h  geometry.cpp  jobs.cpp  jobs.h  scene.cpp  scene.h  stream.h  timer.cpp  timer.h
src/engine/edit/: editor.cpp
src/engine/gfx/: camera.cpp  camera.h  chunk_mesh.cpp  chunk_mesh.h  drawable.h  lut_projected_area.h  prop.h  shader.h
src/engine/net/: proto.h
src/engine/phys/: character.h  player.h
src/engine/proc/: terrain_gen.h
src/engine/res/art/: atlas.tga  toolbox.tga
src/engine/res/fx/: block_light.comp  blocks.frag  blocks.vert  blur.frag  blur.vert  caster.frag  caster.vert  deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert  passthrough.frag  passthrough.vert  rsm.vert  sky.frag  sky.vert
src/engine/ui/: state.h  wrap.cpp  wrap.h
src/engine/vox/: block.cpp  block.h  block_iterator.cpp  block_iterator.h  world.cpp  world.h  world_builder.cpp  world_builder.h
src/main/: AndroidManifest.xml  main.cpp
src/modules/: FindJeMalloc.cmake  FindSDL2.cmake
